fixed alignment

--- a/src/App.css
+++ b/src/App.css
@@ -54,7 +54,6 @@ body,
   height: 50px;
 }
 
-
 .background {
   position: absolute;
   display: flex;
@@ -62,7 +61,7 @@ body,
   align-items: center;
   height: 100vh;
   width: 100vw;
-   /* Make sure image fills the container */
+  /* Make sure image fills the container */
   top: 0;
   left: 0;
   z-index: 1;
@@ -116,9 +115,8 @@ body,
 .signup {
   left: 51vw !important;
   width: 13vw;
-  background: #978CB8 !important;
+  background: #978cb8 !important;
 }
-
 
 .year {
   font-size: 4.1vw;
@@ -178,7 +176,7 @@ body,
   border-right: 0.05em solid transparent; /* The typwriter cursor */
   white-space: nowrap; /* Keeps the content on a single line */
   margin: 0 auto; /* Gives that scrolling effect as the typing happens */
-  letter-spacing: 0.0em; /* Adjust as needed */
+  letter-spacing: 0em; /* Adjust as needed */
   animation: typing 3s steps(40, end) forwards,
     blink-caret 1.4s steps(40, end) forwards,
     slide 0.5s steps(80, end) forwards 2s;
@@ -201,13 +199,13 @@ body,
     border-color: transparent;
   }
   25% {
-    border-color: #BB6DD1;
+    border-color: #bb6dd1;
   }
   50% {
     border-color: transparent;
   }
   75% {
-    border-color: #BB6DD1;
+    border-color: #bb6dd1;
   }
 }
 
@@ -237,9 +235,9 @@ body,
 }
 
 h1 {
-	font-size: 7em;
-	margin-bottom: 0px;
-	margin-top: 0px;
+  font-size: 7em;
+  margin-bottom: 0px;
+  margin-top: 0px;
   font-family: "Poppins", sans-serif;
   font-optical-sizing: auto;
   font-weight: 5 00;
@@ -248,8 +246,8 @@ h1 {
 }
 
 h2 {
-	font-size: 2.55em;
-	margin-bottom: 0px;
+  font-size: 2.55em;
+  margin-bottom: 0px;
   font-family: "Poppins", sans-serif;
   font-optical-sizing: auto;
   font-weight: 700;
@@ -258,8 +256,8 @@ h2 {
 }
 
 h3 {
-	font-size: 2.5em;
-	margin-bottom: 0px;
+  font-size: 2.5em;
+  margin-bottom: 0px;
   font-family: "Poppins", sans-serif;
   font-optical-sizing: auto;
   font-weight: 500;
@@ -268,8 +266,8 @@ h3 {
 }
 
 h4 {
-	font-size: 1.75em;
-	margin-bottom: 0px;
+  font-size: 1.75em;
+  margin-bottom: 0px;
   font-family: "Poppins", sans-serif;
   font-optical-sizing: auto;
   font-weight: 500;
@@ -278,7 +276,7 @@ h4 {
 }
 
 p {
-	font-size: 1.5em;
+  font-size: 1.5em;
   font-family: "Poppins", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
@@ -298,13 +296,13 @@ p {
 }
 
 .link-text:hover {
-  color: #BB6DD1;
+  color: #bb6dd1;
   text-decoration: underline;
 }
 
 li {
-	font-size: 1.5em;
-	padding-bottom: .5em;
+  font-size: 1.5em;
+  padding-bottom: 0.5em;
   font-family: "Poppins", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
@@ -320,28 +318,27 @@ li {
 }
 
 .cover {
-	width: 100%;
-	min-height: 100%;
-	background: none;
-	display: flex;
+  width: 100%;
+  min-height: 100%;
+  background: none;
+  display: flex;
   align-items: stretch;
-  justify-content: space-between
+  justify-content: space-between;
 }
 
-
 .vert {
-	flex-direction: column;
+  flex-direction: column;
 }
 
 .hori {
-	flex-direction: row;
+  flex-direction: row;
 }
 
 .contact-flex {
   position: relative;
   overflow: hidden;
   flex: 1;
-	margin: 0 0%; /* Adjust margins as needed */
+  margin: 0 0%; /* Adjust margins as needed */
   display: flex; /* Make sure columns are also flex containers */
   flex-direction: column; /* Stack columns vertically */
 }
@@ -358,7 +355,7 @@ li {
   position: relative;
   overflow: hidden;
   flex: 1;
-	margin: 0 0%; /* Adjust margins as needed */
+  margin: 0 0%; /* Adjust margins as needed */
   display: flex; /* Make sure columns are also flex containers */
   flex-direction: column; /* Stack columns vertically */
 }
@@ -372,39 +369,39 @@ li {
 }
 
 .even .column {
-	flex: 50%;
+  flex: 50%;
 }
 
 .row {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	margin: auto;
-	margin-left: 5%;
-	margin-right: 5%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin: auto;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
 @media only screen and (orientation: portrait) {
-	.cover {
-		flex-direction: column;
-	}
+  .cover {
+    flex-direction: column;
+  }
 
-	.hori {
-		flex-direction: column;
-	}
+  .hori {
+    flex-direction: column;
+  }
 
-	.column {
-		display: flex;
-		flex-direction: row;
-		align-items: center;
-		margin-left: 10%;
-		margin-right: 10%;
-	}
+  .column {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-left: 10%;
+    margin-right: 10%;
+  }
 
-	.row {
-		margin-left: 10%;
-		margin-right: 10%;
-	}
+  .row {
+    margin-left: 10%;
+    margin-right: 10%;
+  }
 
   .name {
     top: 49vh;
@@ -425,12 +422,12 @@ li {
     height: 2.5vh;
     top: 51vh;
     left: 62vw;
+    padding: 0;
   }
 
   .signup {
     left: 48vw !important;
   }
-
 }
 
 @media only screen and (orientation: landscape) {
